# shlol

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  validate.sh
src/: ast.c  ast.h  command_type.inc  executor.c  executor.h  lexer.c  lexer.h  main.c  parser.c  parser.h  token.h  token_type.h  token_type.inc
